# ocr-simple-service

./: .gitignore  .pylintrc  README.md  config.example.toml  pyproject.toml  server.py
api/: __init__.py
api/handlers/: base.py  ocr.py
api/routes/: __init__.py  ocr.py
