[tool.poetry]
name = "ocr-simple-service"
package-mode = false
description = "OCR Simple Service"
authors = ["Merfrei <contact@merfrei.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiohttp = {extras = ["speedups"], version = "^3.9.5"}
toml = "^0.10.2"
pydantic = "^2.7.0"
pytesseract = "^0.3.10"
opencv-python = "^4.9.0.80"

[tool.poetry.dev-dependencies]
pylint = "^3.1.0"
ipython = "^8.23.0"
pytest = "^8.1.1"
autopep8 = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
